--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
-            android:name=".Services.TelaLoginImplementacao"
+            android:name=".Services.TelaLogin.TelaLoginImplementacao"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
