--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,12 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
+            android:name=".Services.TelaFormCadastro.TelaFormCadastroImplementacao"
+            android:exported="false" />
+        <activity
             android:name=".Services.TelaLogin.TelaLoginImplementacao"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
