--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
+            android:name=".Services.TelaPrincipal.TelaPrincipalImplementacao"
+            android:exported="false" />
+        <activity
             android:name=".Services.TelaFormCadastro.TelaFormCadastroImplementacao"
             android:exported="false" />
         <activity
