--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,21 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.5.0' // Atualize conforme necessário
+        classpath 'com.google.gms:google-services:4.4.2'
+    }
+}
+
 plugins {
-alias(libs.plugins.android.application) apply false
+    id 'com.google.gms.google-services' version '4.4.2' apply false
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
 }
