--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,15 @@
         <activity
             android:name=".Services.TelaPrincipal.TelaPrincipalImplementacao"
             android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:screenOrientation="portrait"/>
+
         <activity
             android:name=".Services.TelaFormCadastro.TelaFormCadastroImplementacao"
             android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:screenOrientation="portrait"/>
+
         <activity
             android:name=".Services.TelaLogin.TelaLoginImplementacao"
             android:exported="true"
@@ -28,10 +32,8 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
